[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/CreditsController.gd" type="Script" id=1]
[ext_resource path="res://sprites/menu/createdby.png" type="Texture" id=2]
[ext_resource path="res://sprites/menu/static.png" type="Texture" id=3]
[ext_resource path="res://sprites/menu/inferno.png" type="Texture" id=4]
[ext_resource path="res://sprites/menu/licenses.png" type="Texture" id=5]
[ext_resource path="res://sprites/menu/hf/licenses_hf.png" type="Texture" id=6]
[ext_resource path="res://sprites/menu/back.png" type="Texture" id=7]
[ext_resource path="res://sprites/menu/hf/back_hf.png" type="Texture" id=8]

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 966.0
margin_bottom = 540.0
focus_neighbour_top = NodePath("LicenseBtn")
focus_neighbour_bottom = NodePath("LicenseBtn")
focus_mode = 2
custom_constants/separation = 75
script = ExtResource( 1 )

[node name="CreditsLabel" type="TextureRect" parent="VBoxContainer"]
margin_right = 966.0
margin_bottom = 52.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 127.0
margin_right = 966.0
margin_bottom = 223.0
custom_constants/separation = 150

[node name="static" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 408.0
margin_bottom = 96.0
texture = ExtResource( 3 )

[node name="inferno" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 558.0
margin_right = 966.0
margin_bottom = 96.0
texture = ExtResource( 4 )

[node name="LicenseBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 298.0
margin_right = 966.0
margin_bottom = 350.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )

[node name="BackBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 425.0
margin_right = 966.0
margin_bottom = 477.0
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 8 )
[connection signal="pressed" from="VBoxContainer/LicenseBtn" to="VBoxContainer" method="_on_LicenseBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/BackBtn" to="VBoxContainer" method="_on_BackBtn_pressed"]
